# motifmaker

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
deploy/: README_DEPLOY.md
deploy/caddy/: Caddyfile.example
deploy/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
deploy/env/: .env.example.docker  .env.example.server
deploy/k8s/: README_k8s.md
deploy/nginx/: motifmaker.conf.example
deploy/scripts/: check_health.sh  install_python_venv.sh  manage_vps_inventory.py  reload_systemd.sh  run_uvicorn_dev.sh  setup_systemd.sh  smoke_test.sh  tail_logs.sh
desktop/: README_DESKTOP.md  electron-builder.yml  package.json  tsconfig.json
desktop/src/: backend.ts  csp.ts  env.ts  main.ts  preload.ts
docs/: ALGORITHMS.md  API_SPEC.md  ARCHITECTURE.md  TESTING.md
examples/: generate_from_example.sh  prompt_city_night.txt
src/motifmaker/: __init__.py  api.py  audio_render.py  auth.py  cli.py  config.py  errors.py  form.py  harmony.py  logging_setup.py  main.py  (+9 more)
tests/: conftest.py  test_album.py  test_api_errors.py  test_api_light.py  test_async_render.py  test_audio_render.py  test_auth_quota.py  test_cli_args.py  test_cli_flow.py  test_db.py  test_end_to_end.py  test_harmony_levels.py  test_mixer.py  test_motif.py  test_parsing.py  test_paths.py  test_persistence.py  test_ratelimit.py  test_regenerate_section.py  test_render_providers.py  test_schema.py  test_smoke_api.py  test_validation.py  test_web_endpoints.py
tools/: __init__.py  album.py  build_web.sh  cleanup.py  cli.py  db.py  generator.py  mixer.py  requirements.txt  synth.py
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.setup.ts
webapp/: main.py
(+26 files in other folders)
