[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motifmaker"
version = "0.1.0"
description = "A layered music generation prototype from natural language prompts"
requires-python = ">=3.10"
authors = [{ name = "", email = "" }]
dependencies = []

[project.scripts]
motifmaker = "motifmaker.cli:app"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true
